--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,8 +1,8 @@
-pandas
-numpy
-tqdm
-torch
-captum
-scikit-learn
-mapie
-scikit-optimize
+tqdm==4.66.5
+scipy==1.14.1
+pandas==2.2.3
+numpy==1.26.4
+torch==2.4.1
+captum==0.7.0
+scikit-learn==1.5.2
+scikit-optimize==0.10.2
